Add index page structure

--- a/Index.html
+++ b/Index.html
@@ -1,35 +1,97 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Jim Beck's Academic Website</title>
-    </head>
-    <body>
-        <<ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link" href="Home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="About">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="CV">CV</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="Blog">Blog</a>
-          </li>
-        </ul>
-        <div class="container">
-        <div class="blurb">
-          <<h1>Hello there, I'm Jim Beck</h1>>
-          <<p>I'm a Ph.D Student in Computational Science and Engineering at Boise State University</p>> <a href="/about">Read more about me here.</a>
-        </div><!--/.blurb -->
-        </div><!--/.container -->
-        <<footer>
-          <<ul>
-            <<li><a href="mailto:jimbeck@u.boisestate.edu">email</a></li>
-            <<li><a href="https:github.com/jdbeck66">github.com/jdbeck66</a></li>
-          </ul>
-        </footer>
-    </body>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <title>Jim Beck's Research Website</title>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img src="images/boisestate-B-2color.png" width="30" height="25" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Research
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Current</a>
+            <a class="dropdown-item" href="#">Publications</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="https://github.com/Jdbeck66/Research" target="_blank">Repository</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" tabindex="-2">Blog</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="https://erichayden7.wixsite.com/haydenlab" target="_blank" tabindex="-1">Hayden Lab</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+
+  <div class="jumbotron">
+    <h1 class="display-4">Jim Beck</h1>
+    <p class="lead">Computational Biology Researcher</p>
+    <hr class="my-4">
+    <p>Ph.D Student - Computing | Computational Science and Engineering</p>
+    <a class="btn btn-primary btn-lg" href="https://computing.boisestate.edu/computational-science-engineering-emphasis/" target="_blank" role="button">Learn more</a>
+  </div>
+<div class="row">
+  <div class="card" style="width: 24rem;">
+    <img src="images/CMI_2019.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">2019 CMI International Microbiome Meeting</h5>
+      <p class="card-text">High-impact presentations on the latest discoveries in microbiome sciences, with sessions on topics ranging from the microbiome in human disease and wellness and the metabolome, to primate microbiomes, to environmental and ocean microbiomes.</p>
+      <a href="http://cmi.ucsd.edu/sites/cmi.ucsd.edu/files/docs/CIMM%20Agenda_0.pdf" target="_blank" class="btn btn-primary">Agenda</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 24rem;">
+    <img src="images/JDB_Shiv.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">OtherJunk</h5>
+      <p class="card-text">Cool Bike I used to race on.</p>
+      <!--<a href="http://cmi.ucsd.edu/sites/cmi.ucsd.edu/files/docs/CIMM%20Agenda_0.pdf" target="_blank" class="btn btn-primary">Agenda</a> -->
+    </div>
+  </div>
+
+</div>
+
+
+
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</body>
+
 </html>
