Update Jumbotron and cards

--- a/Index.html
+++ b/Index.html
@@ -34,10 +34,11 @@
             Research
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Current</a>
+            <a class="dropdown-item" href="#">Research</a>
             <a class="dropdown-item" href="#">Publications</a>
+            <a class="dropdown-item" href="#">Favorite Link</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="https://github.com/Jdbeck66/Research" target="_blank">Repository</a>
+            <a class="dropdown-item" href="https://github.com/Jdbeck66/Research" target="_blank">Code Repository</a>
           </div>
         </li>
         <li class="nav-item">
@@ -55,24 +56,29 @@
     </div>
   </nav>
 
-  <div class="jumbotron">
-    <h1 class="display-4">Jim Beck</h1>
-    <p class="lead">Computational Biology Researcher</p>
-    <hr class="my-4">
-    <p>Ph.D Student - Computing | Computational Science and Engineering</p>
-    <a class="btn btn-primary btn-lg" href="https://computing.boisestate.edu/computational-science-engineering-emphasis/" target="_blank" role="button">Learn more</a>
+  <div class="jumbotron" style="background-image:url(images/lofoten.png); background-size: 100% 100%;">
+    <h1 class="display-4" style="color:white">Jim Beck</h1>
+    <p class="lead" style="color:white">Computational Biology Researcher</p>
+    <hr class="my-4 ml-0" style="width: 500px; color:white">
+    <p style="color:white">Ph.D Student - Computing | Computational Science and Engineering</p>
+    <a class="btn btn-primary btn-lg" href="https://computing.boisestate.edu/computational-science-engineering-emphasis/" target="_blank" role="button">Program Information</a>
   </div>
-<div class="row">
-  <div class="card" style="width: 24rem;">
+
+  <div class="m-3">
+  <h3>Current Research</h3>
+  </div>
+  <div class="m-4">
+  <div class="row ml-2">
+  <div class="card m-2" style="width: 24rem;">
     <img src="images/CMI_2019.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">2019 CMI International Microbiome Meeting</h5>
       <p class="card-text">High-impact presentations on the latest discoveries in microbiome sciences, with sessions on topics ranging from the microbiome in human disease and wellness and the metabolome, to primate microbiomes, to environmental and ocean microbiomes.</p>
-      <a href="http://cmi.ucsd.edu/sites/cmi.ucsd.edu/files/docs/CIMM%20Agenda_0.pdf" target="_blank" class="btn btn-primary">Agenda</a>
+      <a href="http://cmi.ucsd.edu/sites/cmi.ucsd.edu/files/docs/CIMM%20Agenda_0.pdf" target="_blank" class="btn btn-primary">Conference Agenda</a>
     </div>
   </div>
 
-  <div class="card" style="width: 24rem;">
+  <div class="card m-2" style="width: 24rem;">
     <img src="images/JDB_Shiv.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">OtherJunk</h5>
@@ -81,8 +87,17 @@
     </div>
   </div>
 
-</div>
+  <div class="card m-2" style="width: 24rem;">
+    <img src="images/Gunner.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Gunner</h5>
+      <p class="card-text">A Good Boy</p>
+      <!--<a href="http://cmi.ucsd.edu/sites/cmi.ucsd.edu/files/docs/CIMM%20Agenda_0.pdf" target="_blank" class="btn btn-primary">Agenda</a> -->
+    </div>
+  </div>
 
+</div>
+</div>
 
 
 
